--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 
 <app-header></app-header>
+<div class="floatmy">
 
+  <app-task-add ></app-task-add>
+  <app-add-event></app-add-event>
+</div>
   <div class="container">
+
     <div class="row">
 
-      <app-events></app-events>
+     <app-events></app-events>
+     <app-tasks class="taskstyle"></app-tasks>
     </div>
+<div class="col">
+
+</div>
     </div>
