--- a/src/app/events/add-event/add-event.component.html
+++ b/src/app/events/add-event/add-event.component.html
@@ -1,3 +1,22 @@
-<p>
-  add-event works!
-</p>
+<div class="forms">
+
+
+<div class="form-group ">
+  <label for="Name">Name</label>
+  <input type="email" class="form-control" id="Name" aria-describedby="Name" placeholder="Name">
+ </div>
+
+<div class="form-group">
+  <label for="exampleInputPassword1">Description</label>
+  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Description">
+</div>
+<div class="form-group">
+  <label for="Image">Image</label>
+  <input type="file" class="form-control-file" id="Image">
+</div>
+<div class="form-group">
+  <label for="inputDate">Date</label>
+  <input type="date" class="form-control">
+</div>
+<button type="submit" class="btn btn-primary">Add</button>
+</div>
