--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Events</a>
+  <a class="navbar-brand" href="#">Planner</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Events <span class="sr-only">(current)</span></a>
+
+
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Tasks <span class="sr-only">(current)</span></a>
+
+
       </li>
     </ul>
   </div>
 </nav>
-<nav class="nav flex-column">
+<!-- <nav class="nav flex-column verticalnav">
   <a class="nav-link active" href="#">Active</a>
   <a class="nav-link" href="#">Link</a>
   <a class="nav-link" href="#">Link</a>
   <a class="nav-link disabled" href="#">Disabled</a>
-</nav>
+</nav> -->
