--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,25 @@
 
-<app-header></app-header>
-<div class="floatmy">
+<!-- <div class="floatmy">
 
-  <app-task-add ></app-task-add>
-  <app-add-event></app-add-event>
-</div>
+   <app-task-add ></app-task-add>
+    <app-add-event></app-add-event>
+    <app-edit-component></app-edit-component> -->
+  <!-- </div>  -->
   <div class="container">
+    <app-header></app-header>
 
     <div class="row">
+      <!-- <app-events></app-events> -->
+     <!-- <app-events></app-events>
+     <app-tasks class="taskstyle"></app-tasks> -->
 
-     <app-events></app-events>
-     <app-tasks class="taskstyle"></app-tasks>
+     <!-- <app-home-app></app-home-app> -->
     </div>
+    <router-outlet></router-outlet>
 <div class="col">
 
 </div>
     </div>
+    <footer>
+
+    </footer>
