--- a/src/app/events/eventlist/eventlist.component.html
+++ b/src/app/events/eventlist/eventlist.component.html
@@ -1,12 +1,14 @@
+
+
+  <router-outlet></router-outlet>
 <div class="row">
   <div class="col">
-
     <app-event-item  *ngFor="let item of Events; let i = index"
     [currentEvent]="item" >
 
     </app-event-item>
 
-    <div class="btn-group">
+    <!-- <div class="btn-group">
       <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Hide Events
       </button>
@@ -16,10 +18,11 @@
 
     </app-event-item>
       </div>
-    </div>
+    </div> -->
 
 
 
   </div>
 </div>
+
 
