--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,15 +5,30 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Events <span class="sr-only">(current)</span></a>
+      <li class="nav-item " routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/home']">Home </a>
+      </li>
+      <li class="nav-item " routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/events']" >Events </a>
 
 
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Tasks <span class="sr-only">(current)</span></a>
+      <li class="nav-item " routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/show-my-events']">Show Events </a>
+      </li>
+      <li class="nav-item " routerLinkActive="active">
+        <a class="nav-link" href="#">Tasks </a>
+      </li>
 
+      <li class="nav-item  dropdown" routerLinkActive="active">
+        <a class="nav-link dropdown-toggle" [routerLink]="['/about']" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" [routerLink]="['/about/info']">Info</a>
+          <a class="dropdown-item" [routerLink]="['/about/contact']">Contact</a>
 
+        </div>
       </li>
     </ul>
   </div>
